SCAD-0001[Inclui api de consulta livros e faz paginação nos resultados]
